# django-realtime-notifications

./: .env.example  README.md  manage.py  pyproject.toml
django_realtime_notifications/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: index.html
notifications/: admin.py  consumers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
notifications/middleware/: jwt_auth.py  metrics.py
notifications/migrations/: 0001_initial.py
notifications/services/: delivery.py  presence.py  priority.py  rate_limiter.py
users/migrations/: 0001_initial.py
