[project]
name = "django-realtime-notifications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.0",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=6.0",
    "django-celery-beat>=2.1.0",
    "djangorestframework>=3.16.1",
    "djoser>=2.3.3",
]
